# eccv26-physai-workshop-vdm_nvs_bench

./: .gitignore  README.md  metric_video_psnr.py  pyproject.toml
assets/example_pair/: target_trajectory.npz
configs/: davis.yaml  syn4d_heldout.yaml
examples/: syn4d_gt_sanity_summary.json  syn4d_gt_sanity_vbench.json
examples/submission_format/: README.md
scripts/: download_weights.py  make_kaggle_nvs_solution.py  make_syn4d_heldout.py  make_syn4d_kaggle_nvs.py  run_gt_sanity_1gpu.sh
tests/: test_smoke.py
vdm_nvs_bench/: cli.py  weights.py
vdm_nvs_bench/camera/: eval_camera.py  pose_metrics.py
vdm_nvs_bench/data/: contracts.py  syn4d_loader.py
vdm_nvs_bench/vbench_eval/: run_vbench.py
vdm_nvs_bench/video/: eval_video.py  paired.py
vdm_nvs_bench/video/common_metrics/: README.md
